--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -21,19 +21,16 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/Jun/2023 14:33:07] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [02/Jun/2023 14:33:11] \"POST /apply HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [02/Jun/2023 14:33:17] \"POST /apply HTTP/1.1\" 200 -\n",
-      "C:\\Users\\RX971WG\\AppData\\Local\\Temp\\ipykernel_49624\\1412614054.py:29: FutureWarning: ['origin', 'name'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "127.0.0.1 - - [02/Jun/2023 16:18:23] \"GET / HTTP/1.1\" 200 -\n",
+      "C:\\Users\\RX971WG\\AppData\\Local\\Temp\\ipykernel_49624\\2033946910.py:34: FutureWarning: ['origin', 'name'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
       "  df_grouped = df_grouped.agg(operation_names)\n",
-      "127.0.0.1 - - [02/Jun/2023 14:33:30] \"POST /apply HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [02/Jun/2023 16:18:30] \"POST /apply HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask, render_template, request, Markup\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -51,24 +48,41 @@
     "\n",
     "@app.route('/apply', methods=['POST'])\n",
     "def apply():\n",
+    "    # Get the selected group keys\n",
+    "    groupby_columns = request.form.getlist('groupby[]')\n",
+    "\n",
+    "    # Validate that at least one group key is selected\n",
+    "    if not groupby_columns:\n",
+    "        return render_template('index.html', error='Please select at least one group key.', columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
+    "\n",
     "    # Group by the selected columns\n",
-    "    groupby_columns = request.form.getlist('groupby')\n",
     "    df_grouped = df.groupby(groupby_columns)\n",
     "\n",
     "    # Get the selected operations\n",
-    "    operation_names = request.form.getlist('operation')\n",
-    "    \n",
+    "    operation_names = request.form.getlist('operation[]')\n",
+    "\n",
     "    # Perform the selected aggregation operations\n",
     "    df_grouped = df_grouped.agg(operation_names)\n",
     "\n",
+    "    # Get the selected columns to view\n",
+    "    view_columns = request.form.getlist('columns[]')\n",
+    "\n",
+    "    # Filter the DataFrame based on the selected columns\n",
+    "    df_view = df_grouped if not view_columns else df_grouped[view_columns]\n",
+    "\n",
     "    # Convert DataFrame to an HTML table\n",
-    "    table = df_grouped.T.to_html()\n",
+    "    table = df_view.to_html()\n",
     "\n",
     "    return render_template('index.html', table=Markup(table), columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=False)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
