--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -21,10 +21,10 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/Jun/2023 16:18:23] \"GET / HTTP/1.1\" 200 -\n",
-      "C:\\Users\\RX971WG\\AppData\\Local\\Temp\\ipykernel_49624\\2033946910.py:34: FutureWarning: ['origin', 'name'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
-      "  df_grouped = df_grouped.agg(operation_names)\n",
-      "127.0.0.1 - - [02/Jun/2023 16:18:30] \"POST /apply HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [02/Jun/2023 17:11:32] \"GET /apply HTTP/1.1\" 405 -\n",
+      "127.0.0.1 - - [02/Jun/2023 17:11:34] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jun/2023 17:11:38] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jun/2023 17:11:46] \"POST /apply HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -55,8 +55,12 @@
     "    if not groupby_columns:\n",
     "        return render_template('index.html', error='Please select at least one group key.', columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
     "\n",
+    "    # Filter the DataFrame based on the selected columns\n",
+    "    selected_columns = groupby_columns + request.form.getlist('columns[]')\n",
+    "    df_filtered = df[selected_columns]\n",
+    "\n",
     "    # Group by the selected columns\n",
-    "    df_grouped = df.groupby(groupby_columns)\n",
+    "    df_grouped = df_filtered.groupby(groupby_columns)\n",
     "\n",
     "    # Get the selected operations\n",
     "    operation_names = request.form.getlist('operation[]')\n",
@@ -64,14 +68,8 @@
     "    # Perform the selected aggregation operations\n",
     "    df_grouped = df_grouped.agg(operation_names)\n",
     "\n",
-    "    # Get the selected columns to view\n",
-    "    view_columns = request.form.getlist('columns[]')\n",
-    "\n",
-    "    # Filter the DataFrame based on the selected columns\n",
-    "    df_view = df_grouped if not view_columns else df_grouped[view_columns]\n",
-    "\n",
     "    # Convert DataFrame to an HTML table\n",
-    "    table = df_view.to_html()\n",
+    "    table = df_grouped.to_html()\n",
     "\n",
     "    return render_template('index.html', table=Markup(table), columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
     "\n",
