--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -21,15 +21,26 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/Jun/2023 17:11:32] \"GET /apply HTTP/1.1\" 405 -\n",
-      "127.0.0.1 - - [02/Jun/2023 17:11:34] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [02/Jun/2023 17:11:38] \"POST /apply HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [02/Jun/2023 17:11:46] \"POST /apply HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [03/Jun/2023 22:53:10] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:18] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:19] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:19] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:19] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:19] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:20] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:21] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:53:26] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:58:50] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Jun/2023 22:59:01] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Jun/2023 21:10:37] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Jun/2023 21:10:39] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Jun/2023 21:10:42] \"POST /apply HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Jun/2023 21:10:45] \"POST /apply HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
-    "from flask import Flask, render_template, request, Markup\n",
+    "from flask import Flask, render_template, request, jsonify\n",
     "import pandas as pd\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -53,36 +64,42 @@
     "\n",
     "    # Validate that at least one group key is selected\n",
     "    if not groupby_columns:\n",
-    "        return render_template('index.html', error='Please select at least one group key.', columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
+    "        return jsonify(error='Please select at least one group key.')\n",
     "\n",
-    "    # Filter the DataFrame based on the selected columns\n",
-    "    selected_columns = groupby_columns + request.form.getlist('columns[]')\n",
-    "    df_filtered = df[selected_columns]\n",
+    "    # Get the selected columns for aggregation\n",
+    "    selected_columns = request.form.getlist('columns[]')\n",
+    "\n",
+    "    # Validate that groupby columns and selected columns are different\n",
+    "    if set(groupby_columns).intersection(set(selected_columns)):\n",
+    "        return jsonify(error='Please select different columns for group keys and operations.')\n",
     "\n",
     "    # Group by the selected columns\n",
-    "    df_grouped = df_filtered.groupby(groupby_columns)\n",
+    "    df_grouped = df.groupby(groupby_columns)\n",
     "\n",
     "    # Get the selected operations\n",
     "    operation_names = request.form.getlist('operation[]')\n",
     "\n",
     "    # Perform the selected aggregation operations\n",
-    "    df_grouped = df_grouped.agg(operation_names)\n",
+    "    df_grouped = df_grouped.agg({col: operation_names for col in selected_columns})\n",
     "\n",
-    "    # Convert DataFrame to an HTML table\n",
-    "    table = df_grouped.to_html()\n",
+    "    # Convert DataFrame to an HTML table with commas and two decimal points\n",
+    "    table = df_grouped.to_html(float_format=lambda x: '{:,.2f}'.format(x), table_id=\"resultTable\")\n",
     "\n",
-    "    return render_template('index.html', table=Markup(table), columns=df.columns.tolist(), operations=['sum', 'mean', 'max', 'min', 'count'])\n",
+    "\n",
+    "    return jsonify(table=table)\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=False)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -110,8 +127,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
